--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 <meta charset="UTF-8">
 </head>
 <body>
-This is my home page
+This is my home page. Go to my portfolio: <a href="	https://webcert.github.io/portfolio">Portfolio</a>
 </body>
 </html>
